--- a/src/index.ejs
+++ b/src/index.ejs
@@ -4,6 +4,6 @@
 	<title></title>
 </head>
 <body>
-<div>My content goes here, please see carefully :), got it....</div>
+<div>My content goes here, please see carefully got it</div>
 </body>
 </html>
